--- a/playbooks/pingservers.yaml
+++ b/playbooks/pingservers.yaml
@@ -1,9 +1,8 @@
 ---
-- hosts: all
-  gather_facts: no
-  remote_user: ansible
-  tasks:
-    - name: Test connection
-      ping:
-      remote_user: ansible
+-hosts: all
+ gather_facts: no
+ tasks:
+  - name: Ping Servers
+  Ping:
+
 ...
