--- a/playbooks/pingservers.yaml
+++ b/playbooks/pingservers.yaml
@@ -1,8 +1,7 @@
 ---
-- hosts: all
-  gather_facts: no
+- name: Ping Servers
+  hosts: all
   tasks:
-  - name: Ping Servers
-    Ping:
-
+    - name: Ping servers
+      ping:
 ...
