--- a/playbooks/installhttpserver.yaml
+++ b/playbooks/installhttpserver.yaml
@@ -13,7 +13,7 @@
       name: httpd
      state: latest
    - name: Copy index.html  
-     file:
+     copy:
      src: index.html
      dest: /var/www/html/index.html
   notify:
